[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobs"
version = "1.2.1"
authors = [
  { name = "Craig McQueen", email = "python@craig.mcqueen.id.au" },
]
description = "Consistent Overhead Byte Stuffing (COBS)"
keywords = [ "byte stuffing" ]
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]

[project.urls]
"Homepage" = "https://github.com/cmcqueen/cobs-python"
"Bug Tracker" = "https://github.com/cmcqueen/cobs-python/issues"
